tests/checker/ok/newtype_field_access.can
Greeting = String

Unit => Program {
    Greeting("hello").String -> Print
}
