tests/checker/fail/stream_gap.can
Description = String

(Stream<Int>) => Description {
    "a stream"
}

Unit => Program {
    Description("x") -> Print
}
